# Odoo-2025

./: README.md
backend/: .env.example  .gitignore  Dockerfile  QA_SYSTEM.md  README.md  docker-compose.yml  index_questions.py  pyproject.toml  seed_admin_users.py  seed_questions.py  update_admin.py
backend/app/: main.py
backend/app/api/v1/: dependencies.py  routes.py
backend/app/api/v1/router/: auth.py  health.py  images.py  notifications.py  qa.py  users.py
backend/app/config/: loggers.py  settings.py
backend/app/core/: app_factory.py  lifespan.py  middleware.py
backend/app/db/: redis.py
backend/app/db/mongodb/: collections.py  indexes.py  mongodb.py
backend/app/middleware/: logger.py
backend/app/models/: image_models.py  notification_models.py  qa_models.py  user_models.py
backend/app/services/: chromadb_service.py  email_service.py  image_service.py  notification_service.py  qa_service.py  user_service.py
backend/app/utils/: auth_utils.py  image_utils.py  mongo_utils.py
frontend/: middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/ask/: page.tsx
frontend/contexts/: search-context.tsx
frontend/hooks/: use-auth-queries.ts  use-auth.ts  use-current-user.ts  use-misc-queries.ts  use-notification-queries.ts  use-notifications.ts  use-question-queries.ts  use-questions.ts  use-session-refresh.ts
frontend/lib/: api-client.ts  auth.ts  backend-api.ts  react-query-provider.tsx  toast.ts
frontend/types/: api.ts  next-auth.d.ts
(+24 files in other folders)
