[project]
name = "odoo_hackthon"
version = "0.1.0"
description = "Minimal Backend for Authentication and User Management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]==0.115.6",
  "uvicorn>=0.34.1",
  "pydantic==2.10.4",
  "pydantic-settings>=2.8.1",
  "pymongo==4.8.0",
  "motor==3.3.2",
  "redis==5.2.1",
  "httpx==0.28.1",
  "bcrypt>=4.0.0",
  "pyjwt>=2.8.0",
  "aiofiles>=24.1.0",
  "chromadb>=0.4.15",
]


